<resources>
    <string name="app_name">LoveMusic</string>
    <string name="app_subtitle" translatable="false">日常听歌的好帮手</string>
    <string name="local_music">LoveMusic</string>
    <string name="email">qmail_zy@qq.com</string>
    <string name="bl_title" translatable="false">蓝牙</string>
    <string name="normal_text">@string/app_name</string>
    <string name="scan_result_icon" translatable="false">扫描设备的标识</string>
    <string name="menu_refresh" translatable="false">刷新</string>
    <string name="mic_head" translatable="false">音乐头像</string>
    <string name="fun_des_img" translatable="false">功能图片</string>
    <string name="action_close_notify" translatable="false">关闭notification</string>
    <string name="action_start_pause" translatable="false">开始或者暂停</string>
    <string name="action_next" translatable="false">下一首</string>
    <string name="artist_headset" translatable="false">专辑封面</string>
    <string name="action_previous" translatable="false">上一首</string>
    <string name="string_add_all" translatable="false">全部加入播放队列</string>
    <string name="string_read_external">android.permission.READ_EXTERNAL_STORAGE</string>
    <string name="string_write_external">android.permission.WRITE_EXTERNAL_STORAGE</string>

    <string name="string_permission_read" translatable="false">只有得到本地存储权限才能获取到本地媒体文件</string>
    <string name="exit" translatable="false">退出</string>
    <string name="string_loop_mode" translatable="false">播放模式</string>
    <string name="loop_list_recycle">列表循环</string>
    <string name="loop_order_list">顺序播放</string>
    <string name="loop_single_recycle">单曲循环</string>
    <string name="string_loop_model_list" translatable="false">顺序播放</string>
    <string name="string_loop_model_only" translatable="false">单曲循环</string>
    <string name="string_loop_model_list_recycle" translatable="false">列表循环</string>
    <string name="string_loop_model_random" translatable="false">随机播放</string>
    <string name="string_del_media" translatable="false">删除</string>
    <string name="string_sure_del" translatable="false">确认删除吗</string>
    <string name="string_del" translatable="false">删除</string>
    <string name="string_cancel" translatable="false">取消</string>
    <string name="string_custom_time_hint" translatable="false">自定义</string>
    <string name="string_sure" translatable="false">确定</string>
    <string name="itemImgDes">itemImg</string>
    <string name="string_time_init">00:00</string>
    <string name="format_string_time_count_down_with_hour" formatted="false" translatable="false">%dh:%02dm:%02ds后关闭</string>
    <string name="format_string_time_count_down_no_hour" formatted="false" translatable="false">%02d:%02d后关闭</string>
    <string name="empty_play_queue" translatable="false">播放列表为空，未发现曲目</string>
    <string name="queue_loading" translatable="false">加载列表中...</string>
    <string name="loading_complete" translatable="false">加载完成</string>
    <string name="format_string_search_media_count" formatted="false" translatable="false">扫描到%d首曲目</string>
    <string name="no_media_searched" translatable="false">未扫描到曲目</string>
    <string name="start_scanning_the_local_file" translatable="false">开始扫描本地文件</string>
    <string name="string_large_text">android.permission.READ_EXTERNAL_STORAGE|android.permission.READ_EXTERNAL_STORAGE</string>
    <string name="string_close" translatable="false">关闭</string>
    <string name="string_queue_playing_position" formatted="false">正在播放%d/%d</string>
    <string name="string_power_author" formatted="false" translatable="false">powerd by zy</string>
    <string name="string_show_play_state">show play state</string>
    <string name="unknown_name">unknown</string>
    <string name="scan_local_music">扫描音乐</string>
    <string name="bluetooth_manager">蓝牙管理</string>
    <string name="time_to_close">定时关闭</string>
    <string name="show_name_and_author">%s-%s</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://lovemusic.com\",\n  }\n}]</string>
</resources>
