<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/notify_artist_head_iv"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/artist_headset"
        android:background="@mipmap/ic_launcher"
        app:layout_widthPercent="30%" />

    <TextView
        android:id="@+id/notify_display_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:layout_toEndOf="@id/notify_artist_head_iv"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/normal_text"
        app:layout_widthPercent="15%" />

    <TextView
        android:id="@+id/notify_display_sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/notify_display_title"
        android:layout_below="@id/notify_display_title"
        android:layout_toEndOf="@id/notify_artist_head_iv"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/normal_text"
        app:layout_widthPercent="15%" />

    <ImageView
        android:id="@+id/notify_action_close"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_close"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/action_close_notify"
        app:layout_heightPercent="55%"
        app:layout_widthPercent="10%" />

    <ImageView
        android:id="@+id/notify_action_play_pause"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_play"
        android:layout_toStartOf="@+id/notify_action_next"
        android:contentDescription="@string/action_start_pause"
        app:layout_heightPercent="55%"
        app:layout_widthPercent="10%" />

    <ImageView
        android:id="@id/notify_action_next"
        android:layout_centerVertical="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/action_next"
        android:layout_toStartOf="@id/notify_action_close"
        android:background="@drawable/ic_next"
        app:layout_heightPercent="55%"
        app:layout_widthPercent="10%" />

</android.support.percent.PercentRelativeLayout>