<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_content_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.zy.ppmusic.mvp.view.MediaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:background="@color/colorTheme"
        app:popupTheme="@style/ToolBarPopTheme"
        android:theme="@style/ToolBarTheme"
        app:title="@string/app_name"
        app:subtitle="@string/app_name"
        app:subtitleTextColor="@color/colorWhite"
        app:titleTextColor="@color/colorWhite" />

    <View
        android:id="@+id/media_title_tint"
        android:layout_width="match_parent"
        tools:background="@color/colorTheme"
        android:layout_height="@dimen/dp30" />

    <com.zy.ppmusic.widget.ViewPagerBorderWrapper
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <android.support.v4.view.ViewPager
            android:id="@+id/vp_show_media_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.zy.ppmusic.widget.ViewPagerBorderWrapper>

    <!--<com.zy.ppmusic.widget.LoopViewPager-->
        <!---->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1" />-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/control_display_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginStart="@dimen/dp5"
            android:text="@string/string_time_init"
            android:textSize="@dimen/sp11" />

        <SeekBar
            android:id="@+id/control_display_progress"
            style="@style/SelfSeekBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/control_display_duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp5"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp5"
            android:layout_marginStart="@dimen/dp10"
            android:text="@string/string_time_init"
            android:textSize="@dimen/sp11" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:layout_marginTop="@dimen/dp10"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/control_action_loop_model"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/string_loop_mode"
            android:padding="@dimen/dp8"
            android:src="@drawable/ic_loop_model_normal" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/control_action_play_pause"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/action_start_pause"
            android:src="@drawable/ic_black_play" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/control_action_show_queue"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/action_close_notify"
            android:padding="@dimen/dp5"
            android:src="@drawable/ic_menu" />

    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_show_position"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp15"
        android:gravity="bottom|end"
        android:textSize="@dimen/sp12"
        android:textColor="@color/colorWhite"
        tools:background="@color/colorTheme"
        android:textStyle="bold"
        android:visibility="visible"
        tools:text="1000/100000" />
</android.support.v7.widget.LinearLayoutCompat>
